<resources>
    <string name="app_name">OfficineTop</string>
    <string name="tab_home">Home</string>
    <string name="tab_feedback">Feedback</string>
    <string name="tab_news">News</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_carello">Carello</string>
    <string name="sample">""</string>
    <string name="string_not_found">0.0</string>
    <string name="string_space">"    "</string>
    <string name="related_part">-------- Selected part ----------</string>
    <string name="sample_title">""</string>
    <string name="sample_product">""</string>
    <string name="sample_workshop">Officina Cesena Workshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sample_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat
    </string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mob_no">Mobile Number</string>
    <string name="service_list">Service list</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="facebook_app_id">947980622315284</string>
    <string name="fb_login_protocol_scheme">fb947980622315284</string>
    <string name="virtual_garage_title">Fill in the car data</string>
    <string name="add_car">Add Car</string>
    <string name="modify_car">Update Car</string>
    <string name="plate">Licence Plate</string>
    <string name="plate_search_label">Or Search With Licence Plate</string>
    <string name="modify">Modify</string>
    <string name="remove">Remove</string>
    <string name="my_car">My Cars</string>
    <string name="car_parts">Spare Parts Type</string>
    <string name="feedback">Feedback</string>
    <string name="product">Product</string>
    <string name="best_selling_product">Best selling products</string>
    <string name="product_feedback">Product Feedback</string>
    <string name="workshop_feedback">Workshop Feedback</string>
    <string name="coupon_five">Coupon 5</string>
    <string name="more">More</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="dialog_message_feedback">Submit your feedback to earn coupon.</string>
    <string name="dialog_message_add_car">Add car details to get more suitable products and services.</string>
    <string name="dialog_message_select_car">Select car details to get suitable products and services.</string>
    <string name="select_spare_part">Select the type of Spare part</string>
    <string name="select_date">Select the date</string>
    <string name="booking_time">Booking Time%s</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="sel_manufacturer">Select Brand</string>
    <string name="sel_model">Select Model</string>
    <string name="sel_version">Select Car Version</string>
    <string name="sel_fuel">Select Fuel Type</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="version">Version</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="car_km">Km of car</string>
    <string name="car_km_hint">Enter km of car</string>
    <string name="car_km_annual">Km travelled annually</string>
    <string name="car_km_annual_hint">Enter km travelled annually</string>
    <string name="car_revision">Revision Date</string>
    <string name="car_revision_hint">Select Revision Date</string>
    <string name="car_km_revision">Km on Revision Date</string>
    <string name="car_km_revision_hint">Enter km on Revision Date</string>
    <string name="alloy">Alloy Wheels</string>
    <string name="not_logged_in">Not logged in.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="opengmail">Go to Mail</string>
    <string name="technical_characterictic">Technical Features</string>
    <string name="address">Address</string>
    <string name="intervention_setting">Intervention Settings</string>
    <string name="book">Book</string>
    <string name="services">Services</string>
    <string name="see_all">See All</string>
    <string name="feedback_">Feedback</string>
    <string name="all">All</string>
    <string name="price_range">Price Range</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="Paypal">Add Debit/Credit/ATM Card</string>
    <string name="UPI">UPI</string>
    <string name="paymet_type">Select a payment method</string>
    <string name="paymet_name">Payment</string>
    <string name="support">Support</string>
    <string name="support_services">Select Complain Type</string>
    <string name="google_pay">UPI</string>
    <string name="amazon_pay">Amazon Pay</string>
    <string name="COD">Pay on Delivery (Cash/Card)</string>
    <string name="COD_facility">We also accept Credit/ Debit cards on delivery, subject to availability of the payment device. Please check with the delivery agent</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_card">Pay Now</string>
    <string name="ReferralCode">Referral Code</string>
    <string name="type_here">Type here</string>
    <string name="may_help">Hello, may i help you ?</string>
    <string name="entermessage">Enter message</string>
    <string name="ticketClose">Ticket has been closed. You want to generate new ticket?</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="euro_symbol">€</string>
    <string name="prepend_euro_symbol_with_da">€ %d</string>
    <string name="prepend_euro_symbol_with_da_string"> € %s</string>
    <string name="prepend_euro_symbol">€ %d</string>
    <string name="prepend_euro_symbol_string">€ %s</string>
    <string name="tyre_detail">Tyre Detail</string>
    <string name="tyre_price_text">Prezzo gomma: € %s</string>
    <string name="tyre_price_one">%s ECO tassa PFU + 10%% tax</string>
    <string name="tyre_price_total">Total: € %s </string>
    <string name="append_km">%d Km</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="other">Other</string>
    <string name="side">Side</string>
    <string name="url_not_found">Url not found</string>
    <string name="zero">0</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="speed_index_value">This tire is approved for speeds up to %s</string>
    <string name="dummy_prepend_euro_symbol_with_da"> € 10</string>
    <string name="show_only_fav">Show only Favourite</string>
    <string name="show_only_offers">Show only Offers or Coupon</string>
    <string name="proceed">Proceed</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="parts">Parts</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="coupon_details">Coupon Details</string>
    <string name="proceed_to_payment">Proceed to order</string>
    <string name="no_phone_number">No associated phone number for the workshop</string>
    <string name="recommendation_msg">Customers who have seen this article have also seen</string>
    <string name="brand">Brand</string>
    <string name="buy_with_assembly">Buy with assembly in workshop</string>
    <string name="payable_amount">Payable Amount: € %s</string>
    <string name="appointment_for_control">Set an Appointment For Control</string>
    <string name="confirm_online_request_only">I Confirm I Send Online Request Only</string>
    <string name="add_to_cart">Add it to the cart</string>
    <string name="tyres">Tyres</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="tyre_type">Tyre Type</string>
    <string name="season">Season</string>
    <string name="width">Width</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="speed_index">Speed Index</string>
    <string name="additional_info">Additional Information</string>
    <string name="run_flat">Run Flat</string>
    <string name="reinforced">Reinforced</string>
    <string name="find_tyre">Find Tyre</string>
    <string name="diameter_msg">ATTENTION: The results that will be shown later are determined only and exclusively by the size of the tyres chosen.\nThe system does not take into account the possible incompatibilities with the individual car and motorcycle</string>
    <string name="revision">Revision</string>
    <string name="revision_detail">General safety Regulation Revision\nFree Vehicle Inspection</string>
    <string name="choose_workshop">Choose workshop</string>
    <string name="notification">Notification</string>
    <string name="close">Close</string>
    <string name="participation_method">Participation method:</string>
    <string name="text_participation_method">1. Share the link to download the App with a friend. If your friend completes the registration with your reference code, they will receive a credit of €6.\n\n 2. if A invites B and B completes his first order, A gets a credit of €5. If B invites C to complete his first order,  not only can B  get €5 of credit but also A can get €1 of credit.The more friends you invite, the more credit you will have at your disposal.</string>
    <string name="release_method">Release Method:</string>
    <string name="text_release_method">The credit premium is loaded into your account and withdrawable when it exceeds €50.\n\nThe same mobile phone number, license plate number and terminal device number are considered to be the same user.\n\nOnly the mobile number, the license plate number and the terminal device number are all new and registered with a reference code, it is considered as a valid invitation report. \n\nAfter completing the first order of the OfficineTop service, you can receive subsequent credit.\n\nOfficineTop has the right to withdraw prizes and related orders in the event that prizes are obtained by improper means and reserves the right to pursue with legal responsibility.</string>
    <string name="Comment">Comment:</string>
    <string name="Comment_by_user">Comment by user</string>
    <string name="Shopping_Cart">Shopping Cart</string>
    <string name="license_plate">License plate :</string>
    <string name="criteria">Criteria</string>
    <string name="select_car_criteria">Select Car Criteria</string>
</resources>