<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_menu"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/menu_news"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/notification" />

    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/ic_feedback_menu"
        android:title="@string/feedback" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart_menu"
        android:title="@string/Shopping_Cart" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/tab_profile" />

</menu>