<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:orientation="vertical"
android:padding="@dimen/_10sdp"
android:background="@drawable/rounded_white_background"
android:layout_height="wrap_content"
android:layout_marginTop="@dimen/_16sdp">

<TextView
    android:id="@+id/rev_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/gray_dark"
    android:text="@string/revision"
    style="@style/TextViewHeading"
    android:padding="0dp"
    />

<TextView
    android:id="@+id/rev_desc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:text="@string/revision_detail"
    style="@style/TextViewHeading"
    android:paddingLeft="0dp"
    />

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rev_min_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewHeading"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/dummy_prepend_euro_symbol_with_da"
        />

    <TextView
        android:id="@+id/rev_choose_workshop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/choose_workshop"
        style="@style/RoundButton"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="0dp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        />


</FrameLayout>


</LinearLayout>