<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">


            <TextView
                style="@style/TextViewHeading"
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:text="@string/virtual_garage_title"
                android:textColor="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_white_background"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/car_images_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    style="@style/TextViewSubHeadingBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingBottom="0dp"
                    android:paddingTop="0dp"
                    android:text="@string/maker" />

                <FrameLayout
                    android:id="@+id/fl_maker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <com.isapanah.awesomespinner.AwesomeSpinner
                        android:id="@+id/spinner_manufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:spinnerHint="@string/sel_manufacturer"

                        android:padding="0dp"
                        />

                </FrameLayout>

                <TextView
                    style="@style/TextViewSubHeadingBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/model" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <com.isapanah.awesomespinner.AwesomeSpinner
                        android:id="@+id/spinner_model"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="0dp"
                        app:spinnerHint="@string/sel_model" />

                </FrameLayout>

                <TextView
                    style="@style/TextViewSubHeadingBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/fuel_type" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <com.isapanah.awesomespinner.AwesomeSpinner
                        android:id="@+id/spinner_fuel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:spinnerHint="@string/sel_fuel" />

                </FrameLayout>


                <TextView
                    style="@style/TextViewSubHeadingBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/version" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <com.isapanah.awesomespinner.AwesomeSpinner
                        android:id="@+id/spinner_version"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:spinnerHint="@string/sel_version" />

                </FrameLayout>
                <TextView
                    android:id="@+id/tv_criteria"
                    style="@style/TextViewSubHeadingBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:visibility="gone"
                    android:paddingBottom="0dp"
                    android:text="@string/criteria" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <com.isapanah.awesomespinner.AwesomeSpinner
                        android:id="@+id/spinner_criteria"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:spinnerHint="@string/select_car_criteria" />

                </FrameLayout>


              <LinearLayout
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:id="@+id/container_editable"
                  android:layout_height="wrap_content">


                  <TextView
                      style="@style/TextViewSubHeadingBlack"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="0dp"
                      android:paddingTop="0dp"
                      android:paddingBottom="0dp"
                      android:text="@string/car_km" />

                  <FrameLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="10dp">

                      <EditText
                          android:id="@+id/edit_text_km_car"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:hint="@string/car_km_hint"
                          android:inputType="number"
                          android:padding="10dp"
                          android:importantForAutofill="no" />

                  </FrameLayout>


                  <TextView
                      style="@style/TextViewSubHeadingBlack"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="0dp"
                      android:paddingTop="0dp"
                      android:paddingBottom="0dp"
                      android:text="@string/car_km_annual" />

                  <FrameLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="10dp">

                      <EditText
                          android:id="@+id/edit_text_km_annual"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:hint="@string/car_km_annual_hint"
                          android:inputType="number"
                          android:padding="10dp"
                          android:importantForAutofill="no" />

                  </FrameLayout>


                  <TextView
                      style="@style/TextViewSubHeadingBlack"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="0dp"
                      android:paddingTop="0dp"
                      android:paddingBottom="0dp"
                      android:text="@string/car_revision" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/text_revision_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.AppCompat.EditText"
                        android:hint="@string/car_revision_hint"
                        android:inputType="none"
                        android:padding="10dp" />


                </LinearLayout>


                  <TextView
                      style="@style/TextViewSubHeadingBlack"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="0dp"
                      android:paddingTop="0dp"
                      android:paddingBottom="0dp"
                      android:text="@string/car_km_revision" />

                  <FrameLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="10dp">

                      <EditText
                          android:id="@+id/edit_text_km_on_revision_date"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"

                          android:hint="@string/car_km_revision_hint"
                          android:inputType="number"
                          android:padding="10dp"
                          android:importantForAutofill="no" />

                  </FrameLayout>



                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextViewSubHeadingBlack"
                    android:text="@string/alloy"
                    android:padding="0dp"
                    android:id="@+id/alloy"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    />



              </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_plate_number_layout"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:visibility="gone"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:text="@string/license_plate"
                        android:layout_weight="1"
                      android:textColor="@color/black"
                       android:paddingLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:id="@+id/tv_plate_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"

                        android:layout_height="wrap_content"/>


                </LinearLayout>



            </LinearLayout>



            <Button
                android:id="@+id/add_from_fields"
                style="@style/RoundButton"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_car" />

            <LinearLayout
                android:id="@+id/plate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/TextViewHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:text="@string/plate_search_label"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/plate_editText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:ems="1"
                            android:background="@drawable/rounded_white_background"
                            android:hint="@string/plate"
                            android:inputType="textCapCharacters"
                            android:maxLength="7"
                            android:maxLines="1"
                            android:padding="10dp"

                            android:textAllCaps="true"
                            android:importantForAutofill="no" />

                        <ImageView
                            android:id="@+id/search_plate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center"
                            android:padding="10dp"
                            android:src="@drawable/ic_search_gray_24dp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/add_from_plate"
                        style="@style/RoundButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:text="@string/add_car" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>

