<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".invite_frnds.HowItWorksActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".push_notification.NotificationList">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/include_toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewNormal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/participation_method"/>
        <TextView
            android:id="@+id/text_participation_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:gravity="start"
            android:text="@string/text_participation_method"
            android:layout_marginTop="@dimen/_20sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewNormal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/release_method"/>

        <TextView
            android:id="@+id/text_release_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:gravity="start"
            android:textStyle=""
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/text_release_method"
            android:layout_marginTop="@dimen/_20sdp"/>

    </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>